--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
     "react-error-boundary": "^2.3.0",
     "react-hook-form": "^6.0.8",
     "react-i18next": "^11.7.0",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
     "yup": "^0.29.1"
