--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
+    "redux-persist": "^6.0.0",
     "yup": "^0.29.1"
   },
   "scripts": {
