--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
     "@reduxjs/toolkit": "^1.4.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
