--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.19",
     "nanoid": "^3.1.10",
+    "normalizr": "^3.6.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
