--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-error-boundary": "^2.3.0",
     "react-hook-form": "^6.0.8",
     "react-i18next": "^11.7.0",
+    "react-image-magnify": "^2.7.4",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
