--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^4.0.0-alpha.12",
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
     "@reduxjs/toolkit": "^1.4.0",
@@ -17,6 +18,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "i18next": "^19.6.2",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-xhr-backend": "^3.2.2",
