--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "normalizr": "^3.6.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-error-boundary": "^2.3.0",
