--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-error-boundary": "^2.3.0",
-    "react-hook-form": "^6.0.8",
+    "react-hook-form": "^6.11.4",
     "react-i18next": "^11.7.0",
     "react-image-magnify": "^2.7.4",
     "react-number-format": "^4.4.1",
+    "react-query": "^2.26.3",
+    "react-query-devtools": "^2.6.3",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.3",
     "react-slick": "^0.27.11",
